--- a/package.json
+++ b/package.json
@@ -1,35 +1,47 @@
 {
   "scripts": {
-    "dev": "tsx ./express-entry.ts",
+    "dev": "bun ./express-entry.ts",
     "build": "vite build",
     "preview": "cross-env NODE_ENV=production tsx ./express-entry.ts",
     "lint": "eslint ."
   },
+  "imports": {
+    "@/*": "./*.ts"
+  },
   "dependencies": {
+    "@trpc/client": "^10.45.2",
+    "@trpc/server": "^10.45.2",
+    "@universal-middleware/core": "^0.2.11",
     "@universal-middleware/express": "^0.2.6",
-    "express": "^4.21.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "express": "^4.21.0",
+    "fast-xml-parser": "^4.5.0",
+    "pg": "^8.13.1",
+    "pg-format": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "styled-jsx": "^5.1.6",
+    "use-sync-external-store": "^1.2.2",
     "vike-react": "^0.5.7",
-    "@universal-middleware/core": "^0.2.11",
-    "@trpc/server": "^10.45.2",
-    "@trpc/client": "^10.45.2"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "typescript": "^5.6.2",
-    "vike": "^0.4.197",
-    "vite": "^5.4.8",
-    "eslint": "^9.11.1",
     "@eslint/js": "^9.11.1",
-    "typescript-eslint": "^8.7.0",
+    "@types/express": "^4.17.21",
+    "@types/pg": "^8.11.10",
+    "@types/pg-format": "^1.0.5",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
     "globals": "^15.9.0",
-    "@types/express": "^4.17.21",
     "tsx": "^4.19.1",
-    "cross-env": "^7.0.3",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.7.0",
+    "vike": "^0.4.197",
+    "vite": "^5.4.8"
   },
   "type": "module"
 }
